--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>FastPace</title>
 
     <!-- css -->
-    <link rel="icon" href="../html/images/main/fp1.png">
+    <link rel="icon" href="images/main/fp1.png">
     <link rel="stylesheet" href="../html/css/css.css" />
     <link rel="stylesheet" href="../html/css/main.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
