--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="layout">
           <h1 class="header__logo">
             <a href="#">
-              <img src="../html/images/main/fpw.png" alt="FastPace" class="white" />
+              <img src="images/main/fpw.png" alt="FastPace" class="white" />
               <img src="../html/images/main/fplogo.png" alt="FastPace" class="color" />
             </a>
           </h1>
