--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
     <!-- css -->
     <link rel="icon" href="images/main/fp1.png">
-    <link rel="stylesheet" href="../html/css/css.css" />
-    <link rel="stylesheet" href="../html/css/main.css" />
+    <link rel="stylesheet" href="css/css.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script src="../html/js/jquery-3.2.1.min.js"></script>
-    <script src="../html/js/common.js"></script>
-    <script src="../html/js/aos.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/aos.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
   </head>
 
@@ -29,7 +29,7 @@
           <h1 class="header__logo">
             <a href="#">
               <img src="images/main/fpw.png" alt="FastPace" class="white" />
-              <img src="../html/images/main/fplogo.png" alt="FastPace" class="color" />
+              <img src="images/main/fplogo.png" alt="FastPace" class="color" />
             </a>
           </h1>
           <nav id="gnb" >
@@ -76,7 +76,7 @@
                           </div>
                       </div>
                       <div class="sec011__img">
-                          <img src="../html/images/main/ar_ma_img1.png" alt="" />
+                          <img src="images/main/ar_ma_img1.png" alt="" />
                       </div>
                   </div>
               </div>
@@ -100,7 +100,7 @@
                           </div>
                       </div>
                       <div class="sec012__img">
-                          <img src="../html/images/main/pa_ma_img1.png" alt="" />
+                          <img src="images/main/pa_ma_img1.png" alt="" />
                       </div>
                   </div>
                 </div>
@@ -124,7 +124,7 @@
                           </div>
                       </div>
                       <div class="sec013__img">
-                          <img src="../html/images/main/cmd_1.png" alt="" />
+                          <img src="images/main/cmd_1.png" alt="" />
                       </div>
                   </div>
                 </div>
@@ -143,7 +143,7 @@
         <section id="sec03" class="con__box">
           <div class="layout">
             <div class="con__img" data-aos="fade-right" data-aos-anchor="#sec03">
-              <img src="../html/images/main/fplogo.png" alt="" />
+              <img src="images/main/fplogo.png" alt="" />
             </div>
             <div class="con__text">
               <span class="con__title con__title--sm" data-aos="fade-down" data-aos-delay="400" data-aos-anchor="#sec03">(주) 페스트페이스</span>
@@ -163,21 +163,21 @@
             </p>
             <div class="sec02__con">
               <div class="sec02__item">
-                <div class="sec02__item-img" data-aos="zoom-in" data-aos-duration="700" data-aos-delay="800" data-aos-anchor="#sec02"><img src="../html/images/main/i1.png" alt="" /></div>
+                <div class="sec02__item-img" data-aos="zoom-in" data-aos-duration="700" data-aos-delay="800" data-aos-anchor="#sec02"><img src="images/main/i1.png" alt="" /></div>
                 <div class="sec02__item-text" data-aos="fade-up" data-aos-delay="1400" data-aos-anchor="#sec02">
                   <h4>혁 신</h4>
                   <p>"지속적인 연구와 개발을 통해 시장에서 가장 혁신적인 IT 솔루션을 제공합니다. 우리는 기술의 미래를 형성하고 있습니다."</p>
                 </div>
               </div>
               <div class="sec02__item">
-                <div class="sec02__item-img" data-aos="zoom-in" data-aos-duration="700" data-aos-delay="900" data-aos-anchor="#sec02"><img src="../html/images/main/i2.png" alt="" /></div>
+                <div class="sec02__item-img" data-aos="zoom-in" data-aos-duration="700" data-aos-delay="900" data-aos-anchor="#sec02"><img src="images/main/i2.png" alt="" /></div>
                 <div class="sec02__item-text" data-aos="fade-up" data-aos-delay="1600" data-aos-anchor="#sec02">
                   <h4>보 안</h4>
                   <p>"보안은 우리의 최우선 과제입니다. 최신 암호화 기술과 포괄적인 보안 프로토콜로 귀사의 데이터를 안전하게 보호합니다."</p>
                 </div>
               </div>
               <div class="sec02__item">
-                <div class="sec02__item-img" data-aos="zoom-in" data-aos-duration="700" data-aos-delay="1200" data-aos-anchor="#sec02"><img src="../html/images/main/i3.png" alt="" /></div>
+                <div class="sec02__item-img" data-aos="zoom-in" data-aos-duration="700" data-aos-delay="1200" data-aos-anchor="#sec02"><img src="images/main/i3.png" alt="" /></div>
                 <div class="sec02__item-text" data-aos="fade-up" data-aos-delay="1800" data-aos-anchor="#sec02">
                   <h4>편리함</h4>
                   <p>"우리의 솔루션은 사용자 친화적인 디자인에 중점을 두어 언제 어디서나 쉽게 접근하고 사용할 수 있게 합니다. 복잡함 없이 보안을 경험하세요."</p>
@@ -193,7 +193,7 @@
         <section id="sec04" class="con__box">
           <div class="layout">
             <div class="con__img" data-aos="fade-left" data-aos-anchor="#sec04">
-              <img src="../html/images/main/con_img02.png" alt="" />
+              <img src="images/main/con_img02.png" alt="" />
             </div>
             <div class="con__text">
               <span class="con__title con__title--sm" data-aos="fade-down" data-aos-delay="400" data-aos-anchor="#sec04">WHAT</span>
@@ -229,7 +229,7 @@
           <div id="sec051" class="carousel-item active">
             <div class="layout">
               <div class="con__img" data-aos="fade-right" data-aos-anchor="#sec05">
-                <img src="../html/images/main/sv_1.png" alt="" />
+                <img src="images/main/sv_1.png" alt="" />
               </div>
               <div class="con__text">
                 <span class="con__title con__title--sm" data-aos="fade-down" data-aos-delay="400" data-aos-anchor="#sec05"> 서비스 / 네트워크</span>
@@ -257,7 +257,7 @@
           <div id="sec052" class="carousel-item">
             <div class="layout">
               <div class="con__img" data-aos="fade-right" data-aos-anchor="#sec05">
-                <img src="../html/images/main/sv2.png" alt="" />
+                <img src="images/main/sv2.png" alt="" />
               </div>
               <div class="con__text">
                 <span class="con__title con__title--sm" data-aos="fade-down" data-aos-delay="400" data-aos-anchor="#sec05">  서비스 / 보안컨설팅</span>
@@ -294,13 +294,13 @@
               <div class="contact__btn-wrap" data-aos="fade-up" data-aos-delay="600" data-aos-anchor="#sec07">
                 <div class="contact__btn contact__btn--tel">
                   <span class="contact__icon">
-                    <img src="../html/images/main/icon_contact01.svg" alt="" />
+                    <img src="images/main/icon_contact01.svg" alt="" />
                   </span>
                   <p>031-000-000</p>
                 </div>
                 <a href="mailto:thetmyatnoe.2017123@gmail.com" class="contact__btn contact__btn--mail">
                   <span class="contact__icon">
-                    <img src="../html/images/main/icon_contact02.svg" alt="" />
+                    <img src="images/main/icon_contact02.svg" alt="" />
                   </span>
                   <p>thetmyatnoe.2017123@gmail.com</p>
                 </a>
